--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 					shape="rect"
 					coords="30,80,100,200"
 					alt="19120201_NguyenTanDung"
-					href="19120201/index.html"
+					href="members/19120201/19120201.html"
 				/>
 				<area
 					shape="rect"
 					coords="190,80,280,210"
 					alt="19120480_LeNgocDu"
-					href="19120480/index.html"
+					href="members/19120480/19120480.html"
 				/>
 				<area
 					shape="rect"
 					coords="390,90,470,200"
 					alt="19120490_PhamHaiDuong"
-					href="19120490/index.html"
+					href="members/19120490/19120490.html"
 				/>
 			</map>
 		</div>
