--- a/members/19120201/19120201.html
+++ b/members/19120201/19120201.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>19120201</title>
-		<link rel="stylesheet" href="../style.css" />
+		<link rel="stylesheet" href="../../style.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -17,7 +17,7 @@
 				<h1>Ngày sinh: 05-06-2001</h1>
 				<h1>Email: dungnguyenq1w2@gmail.com</h1>
 				<h1>Điện thoại: 0346150407</h1>
-				<a href="../index.html"> << Liên kết quay về nhóm</a>
+				<a href="../../index.html"> << Liên kết quay về nhóm</a>
 			</div>
 		</div>
 	</body>
